--- a/css/map.css
+++ b/css/map.css
@@ -47,7 +47,7 @@ div#topbar button:hover {
   width: 90px;
   margin: 4px 0 4px 10px;
   padding: 4px;
-  padding-right: 17px;
+  //padding-right: 17px;
   //border-radius: 3px;
   border-radius: 6px;
   border: 1px solid #232323;
@@ -90,14 +90,27 @@ button#submit {
   width: 30px;
   margin-left: 8px;
   cursor: pointer;
+  border-radius: 6px 0px 0px 6px !important;
+  padding-right:0px !important;;
+  margin-right: 0px !important;
 }
 
 
 div#submit-icon { 
   //position: left;
-  margin: 2px
+  margin: 2px 2px 0px 2px;
 }
 
+#advSearchButton {
+   border-radius: 0px 6px 6px 0px !important;
+   height:30px;
+   margin-left: 0px !important;
+   padding-left: 0px !important;
+   border-left: 1px solid #333;
+   width: 20px;
+   left: -2px;
+
+}
 
 /*.data-dropdown {
     background-color: #232323;
@@ -217,7 +230,7 @@ div#social-share:hover {
 
 #promo {
   position: relative;
-  float: right;
+  float: left;
   color:#fff;
   font-size: 22px;
   font-weight: bold;
@@ -454,9 +467,9 @@ div#map {
   background-image: linear-gradient(#33bcef,#019ad2)
 }
 
-#termsInput {
-    margin-left:4px !important;
-}
+//#termsInput {
+//    margin-left:4px !important;
+//}
 
 div#control {
   //position: relative;
